update liri to the profile

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/unit-4-game/">
-                    <img src="assets/img/crystalCollectGame.png" alt="crystal" width="500px" />
+                    <img src="assets/img/crystalCollectGame.png" alt="crystal" width="500px"height="250" />
                     <div class="desc">Crystal Collector Game</div>
                 </a>
             </div>
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/TriviaGame/">
-                    <img src="assets/img/Trivia.jpg" alt="Trivia" width="500px" />
+                    <img src="assets/img/Trivia.jpg" alt="Trivia" width="500px" height="250"/>
                     <div class="desc">Universe Trivia Game</div>
                 </a>
             </div>
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/Unit-6-Giphy/">
-                    <img src="assets/img/GiphyMma.JPG" alt="Giphy MMA" width="500px" />
+                    <img src="assets/img/GiphyMma.JPG" alt="Giphy MMA" width="500px"height="250" />
                     <div class="desc">Giphy MMA Search</div>
                 </a>
 
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/Unit-7-Firebase/">
-                    <img src="assets/img/trainTime.jpg" alt="Train Time" width="500px" />
+                    <img src="assets/img/trainTime.jpg" alt="Train Time" width="500px"height="250" />
                     <div class="desc">TrainTime</div>
                 </a>
 
@@ -113,6 +113,26 @@
                 Current Train Schedule will load from Firebase-DataBase and also you can,
                 "ADD Train" by filling out Train Name, Destination, First Train Time (HH:mm)
                 and FruQuency.
+            </p>
+        </div>
+
+        <div class="container">
+            <div class="gallery">
+                <a target="_blank" href="https://github.com/youngtae1386/-liri-node-app">
+                    <img src="assets/img/liri_bot.png" alt="Train Time" width="500px" height="250" />
+                    <div class="desc">Liri_BOT</div>
+                </a>
+
+            </div>
+
+            <p>
+                LIRI is a Language Interpretation and Recognition Interface. 
+                LIRI will be a command line node app that takes in parameters and gives you back data.
+                [Search]
+                Spotify - node liri.js spotify-this "Song Name"
+                Movies - node liri.js movie-this "Movie Title"
+                Band in Town - node liri.js concert-this "Artist or Band"
+                Do What It Says - node liri.js "do-what-it-says"
             </p>
         </div>
     </div>
