--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/"
     crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -101,33 +102,18 @@
           <a href="mailto:youngtae1386@gmail.com">
             <image src="assets\img\Email.png" alt="Name of site">
           </a>
-          <a href="javascript:genPDF()">Download/Print PDF</a>
+          <a href="javascript:genPDF()"></a>
         </div>
         
     </div>
+  </body>
+  <a href='#' onclick="HTMLtoPDF()">Download/Print PDF</a>
     <footer>Plano, Texas • (469) 364-1102 • youngtae1386@gmail.com</footer>
-<div id="editor"></div>
-<button id="cmd">Generate PDF</button>
-
-<script>
- var doc = new jsPDF();
- var specialElementHandlers = {
-     '#editor': function (element, renderer) {
-         return true;
-     }
- };
-
- $('#content').click(function () {
-     doc.fromHTML($('#content').html(), 15, 15, {
-         'width': 170,
-             'elementHandlers': specialElementHandlers
-     });
-     doc.save('sample-file.pdf');
- });
-
- // This code is collected but useful, click below to jsfiddle link.
-</script>
 
 
+
+<script src="assets\js/jspdf.js"></script>
+<script src="assets\js\jquery-2.1.3.js"></script>
+<script src="assets\js/pdfFromHTML.js"></script>
 
 </html>
