--- a/Portfolio.html
+++ b/Portfolio.html
@@ -85,7 +85,6 @@
                     <img src="assets/img/GiphyMma.JPG" alt="Giphy MMA" width="500px"height="250" />
                     <div class="desc">Giphy MMA Search</div>
                 </a>
-
             </div>
             <p>
                 Click Here: Search Your Gifs, <br> Users can request additional gifs to be added to the page.
@@ -106,9 +105,7 @@
                     <img src="assets/img/trainTime.jpg" alt="Train Time" width="500px"height="250" />
                     <div class="desc">TrainTime</div>
                 </a>
-
             </div>
-
             <p>
                 Current Train Schedule will load from Firebase-DataBase and also you can,
                 "ADD Train" by filling out Train Name, Destination, First Train Time (HH:mm)
@@ -119,20 +116,32 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://github.com/youngtae1386/-liri-node-app">
-                    <img src="assets/img/liri_bot.png" alt="Train Time" width="500px" height="250" />
+                    <img src="assets/img/liri_bot.png" alt="Liri Bot" width="500px" height="250" />
                     <div class="desc">Liri_BOT</div>
                 </a>
-
             </div>
-
             <p>
                 LIRI is a Language Interpretation and Recognition Interface. 
-                LIRI will be a command line node app that takes in parameters and gives you back data.
-                [Search]
-                Spotify - node liri.js spotify-this "Song Name"
-                Movies - node liri.js movie-this "Movie Title"
-                Band in Town - node liri.js concert-this "Artist or Band"
-                Do What It Says - node liri.js "do-what-it-says"
+                LIRI will be a command line node app that takes in parameters and gives you back data.<br>
+                [Search]<br>
+                Spotify - node liri.js spotify-this "Song Name"<br>
+                Movies - node liri.js movie-this "Movie Title"<br>
+                Band in Town - node liri.js concert-this "Artist or Band"<br>
+                Do What It Says - node liri.js "do-what-it-says"<br>
+            </p>
+        </div>
+
+
+        <div class="container">
+            <div class="gallery">
+                <a target="_blank" href="https://jonatr0n.github.io/Team-3-Project/">
+                    <img src="assets/img/petFinder.JPG" alt="Liri Bot" width="500px" height="250" />
+                    <div class="desc">Pet_Finder</div>
+                </a>
+            </div>
+            <p>
+                Pawder is an html/css/javascript based application that helps gather quick, simple data to assist in the logistics of pet adoption at shelter operational level. 
+                It was created to be simple to use: low clicks, more digestible information for the user and on the backend, simple searches sorted by zipcode. Utilizes Petfinder API
             </p>
         </div>
     </div>
