checking in bamazon to git hub portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -144,6 +144,22 @@
                 It was created to be simple to use: low clicks, more digestible information for the user and on the backend, simple searches sorted by zipcode. Utilizes Petfinder API
             </p>
         </div>
+
+        <div class="container">
+            <div class="gallery">
+                <a target="_blank" href="https://github.com/youngtae1386/bamazon">
+                    <img src="https://media.giphy.com/media/pHXeniBEJnapX5Zq4l/giphy.gif" alt="bamazon" width="500px" height="250" />
+                    <div class="desc">Pet_Finder</div>
+                </a>
+            </div>
+            <p>
+                Once it starts, the customer will see all the products bamzon has to offer.
+                A prompt will ask you, the customer, to enter the ID of a product. alt text
+                the customer will be asked how many items they would like to purchase.
+                Once the purchase goes through and ask the customer if they would like to continue shopping
+            </p>
+        </div>
+
     </div>
 </body>
 
