checking in typo

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -149,7 +149,7 @@
             <div class="gallery">
                 <a target="_blank" href="https://github.com/youngtae1386/bamazon">
                     <img src="https://media.giphy.com/media/pHXeniBEJnapX5Zq4l/giphy.gif" alt="bamazon" width="500px" height="250" />
-                    <div class="desc">Pet_Finder</div>
+                    <div class="desc">BAmazon</div>
                 </a>
             </div>
             <p>
