adding QR code scanner to prfile

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -160,6 +160,19 @@
             </p>
         </div>
 
+        <div class="container">
+            <div class="gallery">
+                <a target="_blank" href="https://qr-app-team4.herokuapp.com/">
+                    <img src="assets/img/qr_Scanner.png" alt="qr Scan" width="500px" height="250" />
+                    
+                    <div class="desc">Data Base QR Scanner</div>
+                </a>
+            </div>
+            <p>
+                QR Scanner will search the datbase when you scan the QR Code.
+            </p>
+        </div>
+
     </div>
 </body>
 
