--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div>
-                <div class="my-name">Yong Cho</div><br>
+                <div class="my-name">Young Cho</div><br>
                 <div class="my-title">Software Qaulity Engineer</div>
 
                 <!-- Site links-->
